fixed alignment of icons

--- a/app/server-health/styles/inventory.scss
+++ b/app/server-health/styles/inventory.scss
@@ -148,7 +148,8 @@ $title-minWidth: 210px;
       width: 30%;
     }
     .icon__warning {
-      margin-top: -10px;
+      margin-top: -5px;
+      margin-left: .3em;
     }
   }
 }
